# OS-labs

./: .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt  LAB1.docx  README.md  README_DEV.MD  archive.c  archive.h  depack.c  depack.h  dir_tree.c  dir_tree.h  error_codes.h  error_handler.c  error_handler.h  json_stringify.c  json_stringify.h  main.c  parse-args.c  parse-args.h  read-file.c  read-file.h  read_json_from_file.c  read_json_from_file.h  seek-file.c  seek-file.h  string-2-json.c  string-2-json.h  test  write_file.c  write_file.h
lab1_misc/: test.txt  text.txt  tree.txt
lab1_misc/Testdir/: somefile.txt
lab1_misc/Testdir/somedir1/: somenestfile2.txt
lab1_misc/Testdir/somedir2/direct/: anotherfile.txt
lab2/: LAB2.docx  build-a-kernel.sh
lab3/: CMakeLists.txt  README.md  main.c
lab4/: CMakeLists.txt  README.md  main.c
lab4/encoder/: CMakeLists.txt  encoder.c
lab5/: CMakeLists.txt  main.c
lab6/: CMakeLists.txt
lab6/client/: CMakeLists.txt  main.c
lab6/server/: CMakeLists.txt  client.c  client.h  main.c  room.c  room.h
